# opengr2-rust

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  generate_bindings.sh  wrapper.h
__build_attempt_old/: build_old.rs  generate_bindings.sh
__build_attempt_old/src/: lib_old.rs
examples/: test.rs
src/bindings/: compression.rs  crc.rs  darray.rs  debug.rs  elements.rs  magic.rs  oodle1.rs  platform.rs  structures.rs  typeinfo.rs
